--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "^16.9.6",
     "@types/node-telegram-bot-api": "^0.51.4",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
@@ -25,6 +26,7 @@
   },
   "description": "",
   "dependencies": {
+    "axios": "^0.22.0",
     "dotenv": "^10.0.0",
     "node-telegram-bot-api": "^0.54.0",
     "transmission-api": "^0.0.1"
